...
        disabled={isMarkedAsTaken}
      >
        <View style={styles.checkIconContainer}>
          <Ionicons name="checkmark" size={20} color={Colors.primary} />
        </View>
        <Text style={styles.markButtonText}>
          {isMarkedAsTaken ? 'Marked as Taken' : 'Mark as Taken'}
        </Text>
      </TouchableOpacity>

      <TouchableOpacity
        style={[
          styles.snoozeButton,
...
